quantum1-backend-deployment.yaml
#quantum1-backend-deployment (quantum1_k8s.yaml is obsolete)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quantum1-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quantum1-backend
  template:
    metadata:
      labels:
        app: quantum1-backend
    spec:
      containers:
      - name: quantum1-backend
        image: us.icr.io/quantum1space/quantum1-backend:${IMAGE_TAG}
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        command: ["/bin/sh", "-c"]
        args:
          - |
            echo "🚀 Starting AccelCQ Quantum1 backend API with uvicorn...";
            uvicorn app.main:app --host 0.0.0.0 --port 8080;
            echo "🌍 Access AccelCQ Quantum1 backend via: http://$(hostname -i):8080/docs";
