quantum1-backend-service.yaml
#quantum1-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quantum1-backend-service
  namespace: quantum1space
spec:
  selector:
    app: quantum1-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
