quantum1_k8s.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: quantum1-deployment
  namespace: accelcqnamespace
  labels:
    app: quantum1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quantum1
  template:
    metadata:
      labels:
        app: quantum1
    spec:
      containers:
        - name: quantum1
          image: us.icr.io/accelcqnamespace/quantum1:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: log-volume
              mountPath: /app/logs
              subPath: execution_log.log
      volumes:
        - name: log-volume
          persistentVolumeClaim:
            claimName: quantum1-log-pvc

---

apiVersion: v1
kind: Service
metadata:
  name: quantum1-service
  namespace: accelcqnamespace
spec:
  selector:
    app: quantum1
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
